# log_analysis_agentic_ai

./: .gitignore  Dockerfile  README.md  WORKFLOW.md  analyze_logs.sh  docker-compose.yml  document_processor.py  generate_test_logs.py  load_and_analyze.sh  load_logs.sh  log_analysis_agent.py  pyproject.toml  requirements.txt  run_analysis.py
analysis_output/: full_analysis_20250525_131845.json  full_analysis_20250525_135407.json  full_analysis_20250525_135938.json  full_analysis_20250525_142347.json  full_analysis_20250526_000240.json  full_analysis_20250526_214017.json  full_analysis_20250605_085514.json  full_analysis_20250606_093839.json  full_analysis_abc123_20250611_204905.json  full_analysis_rlt509_20250612_091500.json  full_analysis_xyz789_20250611_204015.json  root_cause_analysis_20250525_131845.json  root_cause_analysis_20250525_135407.json  root_cause_analysis_20250525_135938.json  root_cause_analysis_20250525_142347.json  root_cause_analysis_20250526_000240.json  root_cause_analysis_20250526_214017.json  root_cause_analysis_20250605_085514.json  root_cause_analysis_20250606_093839.json  root_cause_analysis_abc123_20250611_204905.json  root_cause_analysis_rlt509_20250612_091500.json
documentation/: system_architecture.md  troubleshooting_guide.md
src/: document_processor.py  load_logs_to_elk.py  log_analysis_agent.py  log_producer.py  redis_client.py  redis_log_analysis_agent.py  run_analysis.py
