[project]
name = "langgraph-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.3",
    "python-dotenv>=1.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "langchain-ollama>=0.0.1",
    "chromadb>=0.4.22",
    "pydantic>=2.5.2",
    "typing-extensions>=4.8.0",
    "PyPDF2>=3.0.0",
    "faiss-cpu>=1.7.4",
    "elasticsearch~=8.14.0",
]
